--- a/src/sass/layout/responsive/mobile.scss
+++ b/src/sass/layout/responsive/mobile.scss
@@ -1,28 +1,36 @@
-// Proper mobile patches
-// NOTE: DON'T MOVE COVE MANILA HERE
-// TODO: Move other mobile properties
+// ------------------------------------------------------
+// Adjustments for Mobile
+// ------------------------------------------------------
 
-body {
-  @include media-breakpoint-down(sm) {
+// smartphone below
+@include media-breakpoint-down(sm) {
+  body {
     overflow-x: hidden;
   }
-}
 
-.main-container {
-  @include media-breakpoint-down(sm) {
+  .main-container {
     margin-bottom: 7vw;
 
+    // hide all line breaks for mobile
+    br {
+      display: none;
+    }
+
     .countdown-row {
+      padding: $row-default-padding;
+
       .countdown-container {
         max-width: 95%;
       }
+    }
 
-      br {
-        display: none;
-      }
+    .world-class-row,
+    .the-company-row {
+      padding: 55px 0;
     }
 
     .the-company-row {
+      padding-bottom: 0;
       transition: unset; // animation bug on scroll
 
       .image-col {
@@ -62,10 +70,10 @@ body {
       .dazzling {
         font-size: 32px !important;
       }
+    }
 
-      // .dazzling-details {
-      //   font-size: 14px;
-      // }
+    .image {
+      width: 100%;
     }
 
     // pre footer
