refactor(sass, theme): theme version 1

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,8 +25,5 @@
 @import 'components/return-to-top';
 @import 'layout/grid';
 
-// Theming
-@import 'themes/hero-section';
-@import 'themes/countdown-section';
-@import 'themes/cove-manila';
-@import 'themes/others';
+// Custom
+@import 'themes/default';
