--- a/src/sass/utils/google-font.scss
+++ b/src/sass/utils/google-font.scss
@@ -1,5 +1,6 @@
 // –––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 // Google Fonts v.2.0.0
+// Source code: https://codepen.io/jakob-e/pen/LVVXjO
 // –––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 //
 // Subset config
