--- a/src/sass/layout/grid.scss
+++ b/src/sass/layout/grid.scss
@@ -3,8 +3,9 @@
 
 // BASE GRID FOR MAIN CONTAINER
 .main-container {
+  // base margin
   margin-bottom: 30em;
-  margin-top: -#{$navbar-default-height};
+  margin-top: -4em;
 
   .hero-row {
     height: $hero-row-height;
