refactor(fonts, typography): disabled Gotham Book font (own copy currently rejected by sanitizer)

--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -7,8 +7,7 @@
 }
 
 // Gothan Family
-// NOTE: CURRENTLY NOT WORKING ON SAFARI
-@include font-face('Gotham Book', '../fonts/GothamBook', normal, normal);
+@include font-face('Gotham Book', '../fonts/GothamBook', normal, normal); // NOT WORKING!
 @include font-face('Gotham Light', '../fonts/GothamLight', normal, normal);
 @include font-face('Gotham Medium', '../fonts/GothamMedium', inherit, normal);
 @include font-face('Gotham Bold', '../fonts/GothamBold', bold, normal);
