--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -8,8 +8,9 @@
 
   .footer-text {
     color: $footer-text-color;
-    font-family: $font-family-gotham-book;
+    font-family: $font-family-open-sans;
     font-size: 11px;
+    font-weight: 300;
   }
 
   @include media-breakpoint-up(md) {
