refactor(grid, guests): responsive guest initial refactor

--- a/src/sass/themes/default.scss
+++ b/src/sass/themes/default.scss
@@ -1,5 +1,6 @@
 // Version 1 of Okada NYE
 @import 'v1/hero-section';
 @import 'v1/countdown-section';
+@import 'v1/guests';
 @import 'v1/cove-manila';
 @import 'v1/others';
