--- a/src/sass/themes/v1/others.scss
+++ b/src/sass/themes/v1/others.scss
@@ -21,19 +21,19 @@ body {
     }
   }
 
-  .the-company-row {
-    .image-col {
-      background-image: url('../images/the-company-group.png');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
-      // min-height: 73px;
-    }
+  // .the-company-row {
+  //   .image-col {
+  //     background-image: url('../images/the-company-group.png');
+  //     background-position: center;
+  //     background-repeat: no-repeat;
+  //     background-size: contain;
+  //     // min-height: 73px;
+  //   }
 
-    .the-company-logo {
-      width: 100%;
-    }
-  }
+  //   .the-company-logo {
+  //     width: 100%;
+  //   }
+  // }
 
   // GUEST LIST
   .guests-row {
@@ -42,7 +42,7 @@ body {
     padding: 0 1.1875rem 1.1875rem !important;
 
     .guest-entry {
-      margin-top: 19px;
+      // margin-top: 19px;
       min-width: 181.35px;
       padding: 0;
 
@@ -153,12 +153,16 @@ body {
     // }
 
     @include media-breakpoint-up(md) {
-      & > .col-12 > .row {
-        // align-content: space-around;
-        flex-wrap: wrap;
-        height: calc(100% + 5em);
-        justify-content: space-around;
-        padding: 4em 2rem 6em;
+      & > .col-12 {
+        height: 100%;
+
+        & > .row {
+          // align-content: space-around;
+          flex-wrap: wrap;
+          height: calc(100% + 5em);
+          justify-content: space-around;
+          padding: 4em 2rem 3em;
+        }
       }
 
       .guest-entry {
@@ -168,7 +172,7 @@ body {
         margin-top: unset;
 
         .guest-info-container {
-          height: calc(320px + 10vw);
+          margin: 1em 0;
           min-height: 320px;
           width: calc(100% - 2rem);
 
@@ -196,12 +200,12 @@ body {
         // margin-top: unset;
 
         .guest-info-container {
-          height: calc(320px + 16vw);
+          // height: calc(320px + 16vw);
           // min-height: 320px;
           // width: calc(100% - 2rem);
 
           .guest-image {
-            height: calc(320px + 12vw);
+            height: calc(320px + 5vw);
             min-height: 320px;
             width: 100%;
           }
