--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -35,13 +35,19 @@ body {
 .container-caption,
 .okada-hero-caption {
   color: $hero-caption-color;
-  font-family: $font-family-gotham-medium;
+  font-family: $font-family-open-sans;
   font-size: 14px;
+  font-weight: normal;
   // text-align: center;
 }
 
 @include media-breakpoint-up(md) {
   .okada-hero-heading {
     font-size: 2.5rem;
+  }
+
+  .container-caption,
+  .okada-hero-caption {
+    font-size: 1.1rem;
   }
 }
