style(responsive, desktop, countdown, the-restaurants): changed font, added Gotham alternative, etc

--- a/src/sass/components/swiper.scss
+++ b/src/sass/components/swiper.scss
@@ -15,15 +15,17 @@
   .swiper-image {
     width: 100%;
   }
+}
 
-  .swiper-pagination {
-    .swiper-pagination-bullet {
-      background: $white;
-      opacity: 1;
-    }
+.swiper-pagination {
+  .swiper-pagination-bullet {
+    background: $gray-500;
+    height: 10px;
+    opacity: 1;
+    width: 10px;
+  }
 
-    .swiper-pagination-bullet-active {
-      background: $color-okada-dark-1;
-    }
+  .swiper-pagination-bullet-active {
+    background: $color-okada-dark-1;
   }
 }
