--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -1,9 +1,14 @@
 // using Google Font Mixin 2.0
 // https://codepen.io/jakob-e/pen/LVVXjO
 @include google-font {
+  // Default fallback font
   @include google-font('Open Sans', 300 400 700, 800);
+  // Custom font
   @include google-font('Playfair Display');
+  // For Cove Manila
   @include google-font('Roboto', 300 400 700);
+  // Alternative to Gotham
+  @include google-font('Montserrat', 300 400 500, 700);
 }
 
 // Gothan Family
@@ -35,9 +40,9 @@ body {
 .container-caption,
 .okada-hero-caption {
   color: $hero-caption-color;
-  font-family: $font-family-open-sans;
+  font-family: $font-family-montserrat;
   font-size: 14px;
-  font-weight: normal;
+  font-weight: 500;
   // text-align: center;
 }
 
