--- a/src/sass/themes/v1/others.scss
+++ b/src/sass/themes/v1/others.scss
@@ -281,7 +281,7 @@ body {
 
     .dazzling-details {
       color: $white;
-      font-family: $font-family-open-sans;
+      font-family: $font-family-montserrat;
       font-size: 14px;
       font-weight: 300;
     }
@@ -300,7 +300,7 @@ body {
   // THE RESTAURANTS
   .the-restaurants-col {
     @include media-breakpoint-up(lg) {
-      padding: 40px 19px;
+      padding: 40px 5vw;
     }
 
     .the-restaurants-logo {
@@ -313,6 +313,10 @@ body {
       color: $hero-caption-color-darker;
       font-family: $font-family-playfair-display-regular;
       font-size: 37px;
+    }
+
+    .okada-hero-caption {
+      font-family: $font-family-montserrat;
     }
   }
 }
@@ -427,22 +431,23 @@ body {
 
       .the-restaurants-logo {
         background-size: contain;
-        height: 120px;
+        height: 7vw;
         margin-bottom: 15px;
         width: 100%;
       }
 
       .the-restaurants-heading {
         // color: $hero-caption-color-darker;
-        font-size: 75px;
-        line-height: 75px;
-        margin-bottom: 0.3em;
+        font-size: 48px;
+        line-height: 50px;
+        margin-bottom: 0.5em;
+        margin-top: 0.89em;
         // width: 60%;
       }
 
       .okada-hero-caption {
-        font-family: $font-family-open-sans;
-        font-size: 24px;
+        font-family: $font-family-montserrat;
+        font-size: 18px;
         font-weight: 300;
       }
     }
