--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,11 +2,13 @@
 $font-family-open-sans: 'Open Sans', sans-serif;
 $font-family-roboto-bold-italic: 'Roboto Bold Italic', sans-serif !important;
 // $font-family-gotham-book: 'Gotham Book', 'Open Sans', 'Roboto', sans-serif; // DISABLED for now
-$font-family-gotham-black: 'Gotham Black', 'Arial Black', serif;
-$font-family-gotham-light: 'Gotham Light', 'Open Sans', 'Roboto', sans-serif;
-$font-family-gotham-medium: 'Gotham Medium', 'Open Sans', 'Roboto', sans-serif;
+$font-family-gotham-black: 'Gotham Black', 'Arial Black', 'Montserrat', sans-serif;
+$font-family-gotham-light: 'Gotham Light', 'Montserrat', 'Open Sans', 'Roboto', sans-serif;
+$font-family-gotham-medium: 'Gotham Medium', 'Montserrat', 'Open Sans', sans-serif;
 $font-family-gotham-medium-fall-back: 'Open Sans', sans-serif;
 $font-family-playfair-display-regular: 'Playfair Display', 'Times New Roman', serif;
+// Montserrat
+$font-family-montserrat: 'Montserrat', sans-serif;
 
 // reusable
 $default-padding-px: 19px;
