style(svg, cove-manila): dj kaka SVG adjustments

--- a/src/sass/themes/v1/cove-manila.scss
+++ b/src/sass/themes/v1/cove-manila.scss
@@ -232,6 +232,14 @@
     }
   }
 
+  iframe,
+  .dj-solaii-svg,
+  .dj-kaka-svg {
+    border: 0;
+    height: 50em;
+    width: 100%;
+  }
+
   // COMPONENTS =====================
 
   .visit-channel-button {
