--- a/src/sass/layout/grid.scss
+++ b/src/sass/layout/grid.scss
@@ -24,8 +24,8 @@
   }
 }
 
-@media screen and (max-width: 1400px) {
-  .main-container {
-    margin-bottom: 60vw;
-  }
-}
+// @media screen and (max-width: 1400px) {
+//   .main-container {
+//     margin-bottom: 60vw;
+//   }
+// }
