refactor(cove-manila, responsive): another adjustments after SVG integration

--- a/src/sass/themes/v1/cove-manila.scss
+++ b/src/sass/themes/v1/cove-manila.scss
@@ -321,6 +321,11 @@
       padding: 0;
     }
 
+    .cove-manila-row-1-sub-1 {
+      position: relative;
+      top: -15em;
+    }
+
     .cove-manila-row-1-sub-2 {
       height: 22em;
       // margin-top: 29em;
@@ -398,13 +403,21 @@
       }
     }
 
+    .dj-solaii-svg {
+      height: 56vw;
+    }
+
     // DJ KAKA
     // .featured-dj-2 {}
+
+    .dj-kaka-svg {
+      height: 56vw;
+    }
 
     // FEATURED DJ BELOW
     .cove-manila-row-2-sub-2 {
       position: relative;
-      top: 3em;
+      top: 15vw;
       width: 100%;
 
       .featured-dj-below {
