--- a/src/sass/layout/grid.scss
+++ b/src/sass/layout/grid.scss
@@ -4,7 +4,7 @@
 // BASE GRID FOR MAIN CONTAINER
 .main-container {
   // base margin
-  margin-bottom: 30em;
+  margin-bottom: 1em;
   margin-top: -4em;
 
   .hero-row {
@@ -24,8 +24,14 @@
   }
 }
 
-// @media screen and (max-width: 1400px) {
-//   .main-container {
-//     margin-bottom: 60vw;
-//   }
-// }
+@media screen and (min-width: 1400px) {
+  .main-container {
+    margin-bottom: 28vw;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .main-container {
+    margin-bottom: 30em;
+  }
+}
