--- a/src/sass/themes/v1/cove-manila.scss
+++ b/src/sass/themes/v1/cove-manila.scss
@@ -258,32 +258,32 @@
 
   // COMPONENTS =====================
 
-  .visit-channel-button {
-    border: $color-okada-normal-4 1px solid;
-    border-radius: 0;
-    border-top: 0 !important;
-    width: 80%;
+  // .visit-channel-button {
+  //   border: $color-okada-normal-4 1px solid;
+  //   border-radius: 0;
+  //   border-top: 0 !important;
+  //   width: 80%;
 
-    &:hover,
-    &:active,
-    &:focus {
-      background: $color-okada-normal-4;
-      box-shadow: unset;
+  //   &:hover,
+  //   &:active,
+  //   &:focus {
+  //     background: $color-okada-normal-4;
+  //     box-shadow: unset;
 
-      .visit-channel-text {
-        color: $black;
-      }
-    }
-  }
+  //     .visit-channel-text {
+  //       color: $black;
+  //     }
+  //   }
+  // }
 
-  .visit-channel-text {
-    color: $color-okada-dark-1;
-    font-family: $font-family-roboto-bold-italic;
-    font-size: 12px;
-    font-style: italic;
-    font-weight: bold;
-    margin: 0;
-  }
+  // .visit-channel-text {
+  //   color: $color-okada-dark-1;
+  //   font-family: $font-family-roboto-bold-italic;
+  //   font-size: 12px;
+  //   font-style: italic;
+  //   font-weight: bold;
+  //   margin: 0;
+  // }
 
   // LARGER SCREENS
   // @include media-breakpoint-up(xl) {
@@ -689,7 +689,7 @@
 
     // DJ SOLAII
     .featured-dj-1 {
-      border: $color-okada-normal-4 1px solid;
+      // border: $color-okada-normal-4 1px solid;
 
       .dj-solaii-head {
         @include display-bg-image('dj-solaii-head', center bottom, auto);
