--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,3 +1,7 @@
+// layout
+$viewport-default-width: 1200px !default;
+$viewport-tablet-width: 996px;
+$viewport-mobile-width: 425px;
 // typography
 $font-family-open-sans: 'Open Sans', sans-serif;
 $font-family-roboto-bold-italic: 'Roboto Bold Italic', sans-serif !important;
