--- a/src/sass/components/return-to-top.scss
+++ b/src/sass/components/return-to-top.scss
@@ -34,9 +34,10 @@
 }
 
 @include media-breakpoint-down(sm) {
+  // https://stackoverflow.com/a/32694476
   .return-to-top {
-    left: inherit;
-    right: 40%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   // footer patches
