--- a/src/sass/themes/default.scss
+++ b/src/sass/themes/default.scss
@@ -2,5 +2,6 @@
 @import 'v1/hero-section';
 @import 'v1/countdown-section';
 @import 'v1/guests';
+@import 'v1/the-restaurants';
 @import 'v1/cove-manila';
 @import 'v1/others';
