--- a/src/sass/themes/v1/others.scss
+++ b/src/sass/themes/v1/others.scss
@@ -242,6 +242,15 @@ body {
       max-height: unset;
     }
 
+    @include media-breakpoint-down(sm) {
+      // set back to default
+      max-height: $the-fountain-md-height;
+
+      .night-show-col {
+        max-height: calc(#{$the-fountain-md-height} - 0.4em);
+      }
+    }
+
     // GUEST LIST FOR TABLETS & UP
     @include media-breakpoint-up(md) {
       height: 54vw;
@@ -302,29 +311,6 @@ body {
     //   padding-right: 2em;
     // }
   }
-
-  // THE RESTAURANTS
-  .the-restaurants-col {
-    @include media-breakpoint-up(lg) {
-      padding: 40px 5vw;
-    }
-
-    .the-restaurants-logo {
-      @include display-bg-image('the-restaurants-logo', left, auto);
-      margin-bottom: 15px;
-      min-height: 56px;
-    }
-
-    .the-restaurants-heading {
-      color: $hero-caption-color-darker;
-      font-family: $font-family-playfair-display-regular;
-      font-size: 37px;
-    }
-
-    .okada-hero-caption {
-      font-family: $font-family-montserrat;
-    }
-  }
 }
 
 @include media-breakpoint-up(xl) {
@@ -355,16 +341,6 @@ body {
         // color: $white;
         // font-family: 'Gotham Book';
         font-size: 14px;
-      }
-    }
-  }
-}
-
-@include media-breakpoint-up(lg) {
-  .main-container {
-    .the-restaurants-col {
-      .the-restaurants-content {
-        padding: 0 5em;
       }
     }
   }
@@ -417,44 +393,6 @@ body {
         // color: $white;
         // font-family: 'Gotham Book';
         font-size: 24px;
-      }
-    }
-
-    // THE RESTAURANTS
-    .the-restaurants-row {
-      flex-direction: row-reverse;
-    }
-
-    .the-restaurants-col {
-      align-items: flex-start;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-
-      .the-restaurants-content {
-        padding: 10px;
-      }
-
-      .the-restaurants-logo {
-        background-size: contain;
-        height: 7vw;
-        margin-bottom: 15px;
-        width: 100%;
-      }
-
-      .the-restaurants-heading {
-        // color: $hero-caption-color-darker;
-        font-size: 48px;
-        line-height: 50px;
-        margin-bottom: 0.5em;
-        margin-top: 0.89em;
-        // width: 60%;
-      }
-
-      .okada-hero-caption {
-        font-family: $font-family-montserrat;
-        font-size: 18px;
-        font-weight: 300;
       }
     }
   }
