refactor(responsive, mobile, cove-manila): few adjustments

--- a/src/sass/layout/responsive/mobile.scss
+++ b/src/sass/layout/responsive/mobile.scss
@@ -175,10 +175,11 @@
     .cove-manila-row-1-sub-1 {
       padding: 0 !important;
       top: 0 !important;
+      z-index: 2;
     }
 
     .cove-manila-row-2-sub-1 {
-      top: -18em !important;
+      top: -16em !important;
     }
 
     .dj-solaii-svg {
