--- a/src/sass/themes/v1/the-restaurants.scss
+++ b/src/sass/themes/v1/the-restaurants.scss
@@ -55,7 +55,7 @@
       }
 
       .the-restaurants-logo {
-        background-size: contain;
+        background-size: contain !important;
         height: 7vw;
         margin-bottom: 15px;
         width: 100%;
