--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -52,3 +52,6 @@ $cove-dj-kaka-width-x3: 695px;
 $cove-dj-kaka-wrapper-height: calc(#{$cove-dj-kaka-height} - 4em);
 $cove-dj-kaka-wrapper-height-x2: calc(#{$cove-dj-kaka-height-x2} - 4em);
 $cove-dj-kaka-wrapper-height-x3: calc(#{$cove-dj-kaka-height-x3} - 20em);
+
+// OTHER DJs
+$cove-other-djs-below-480: calc(186.72px - 2vw);
