feat(preloader, sass): preloader function with spinkit
https://codepen.io/ibanez182/pen/YyJKde

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,6 +21,8 @@
 @import 'components/footer';
 @import 'components/navbar';
 @import 'components/nav-overlay';
+@import 'components/page-preloader';
+@import 'components/spinkit';
 @import 'components/swiper';
 @import 'components/return-to-top';
 @import 'layout/grid';
