--- a/src/sass/themes/v1/svg-adjs.scss
+++ b/src/sass/themes/v1/svg-adjs.scss
@@ -33,7 +33,7 @@ a {
     // border-radius: 0;
     // border-top: 0 !important;
     // display: block;
-    height: 6em;
+    height: 5.63rem;
     // text-align: center;
 
     .visit-channel-text {
